syntax = "proto3";

option go_package = "./greeter/api";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // server streaming call
  rpc SayRepeatedHello(RepeatHelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// The Stream request messsage
message RepeatHelloRequest {
  string name = 1;
  int32 count = 2;
}